plugins {
  id 'application'
  id 'checkstyle'
  id 'pmd'
  id 'idea'
  id 'jacoco'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'org.springframework.boot' version '4.1.0'
  id 'org.owasp.dependencycheck' version '12.2.2'
  id 'com.github.ben-manes.versions' version '0.54.0'
  id 'org.sonarqube' version '7.3.1.8318'
  id 'uk.gov.hmcts.java' version '0.12.70'
  id 'io.freefair.lombok' version '9.5.0'
  id 'org.flywaydb.flyway' version '12.11.0'
  id "info.solidsoft.pitest" version '1.19.0'
  id "au.com.dius.pact" version '4.7.3'
}

group = 'uk.gov.hmcts.reform'
version = '0.0.1'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

tasks.withType(JavaExec).configureEach {
  javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
}

sourceSets {
    functionalTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/functionalTest/java')
        }
        resources.srcDir file('src/functionalTest/resources')
    }

    integrationTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/integrationTest/java')
        }
        resources.srcDir file('src/integrationTest/resources')
    }

  contractTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/contractTest/java')
    }
    resources.srcDir file('src/contractTest/resources')
  }
}

idea {
  module {
    testSources.from(project.sourceSets.integrationTest.java.srcDirs)
    testSources.from(project.sourceSets.functionalTest.java.srcDirs)
    testSources.from(project.sourceSets.contractTest.java.srcDirs)
    testResources.from(project.sourceSets.integrationTest.resources.srcDirs)
    testResources.from(project.sourceSets.functionalTest.resources.srcDirs)
    testResources.from(project.sourceSets.contractTest.resources.srcDirs)
  }
}

tasks.withType(JavaCompile) {
    options.compilerArgs << "-Xlint:unchecked" << "-Werror"
}

tasks.withType(Test) {
    useJUnitPlatform()

    testLogging {
        exceptionFormat = 'full'
    }
}

test {
    failFast = true
}

task functional(type: Test) {
    description = "Runs functional tests"
    group = "Verification"
    testClassesDirs = sourceSets.functionalTest.output.classesDirs
    classpath = sourceSets.functionalTest.runtimeClasspath
}

task integration(type: Test) {
    description = "Runs integration tests"
    group = "Verification"
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    failFast = true
    mustRunAfter test
}

task fortifyScan(type: JavaExec)  {
  mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
  classpath += sourceSets.test.runtimeClasspath
  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

task checkoutDataStoreMigrationScripts (type: Exec){
   executable "src/integrationTest/resources/scripts/checkout-datastore-db-scripts.sh"
   outputs.upToDateWhen { false }
}

//**** Uncomment this line to checkout latest data-store-api migration scripts *****
//integration.dependsOn(checkoutDataStoreMigrationScripts)

check.dependsOn integration

checkstyle {
  maxWarnings = 0
  toolVersion = '13.7.0'
  getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
}

pmd {
    //sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest]
    sourceSets = []
    reportsDir = file("$project.buildDir/reports/pmd")
    // https://github.com/pmd/pmd/issues/876
    ruleSets = []
    ruleSetFiles = files("config/pmd/ruleset.xml")
}

static def getCheckedOutGitCommitHash() {
  'git rev-parse --verify --short HEAD'.execute().text.trim()
}

jacocoTestReport {
    executionData(test)
    reports {
        xml.required = true
        csv.required = false
        xml.outputLocation = file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
    }
}

project.tasks['sonarqube'].dependsOn jacocoTestReport

sonarqube {
  properties {
    property "sonar.projectName", "Reform :: ccd-case-disposer"
    property "sonar.projectKey", "uk.gov.hmcts.reform:ccd-case-disposer"
    property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
    property "sonar.coverage.exclusions", "**/ccd/ApplicationBootstrap.java"
    property "sonar.pitest.mode", "reuseReport"
    property "sonar.pitest.reportsDirectory", "build/reports/pitest"
    property "sonar.sources", "src/main/java"
    property "sonar.tests", "src/test/java,src/contractTest/java,src/functionalTest/java,src/integrationTest/java"
  }
}

// before committing a change, make sure task still works
dependencyUpdates {
    def isNonStable = { String version ->
        def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
        def regex = /^[0-9,.v-]+$/
        return !stableKeyword && !(version ==~ regex)
    }
    rejectVersionIf { selection -> // <---- notice how the closure argument is named
        return isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
    }
}

// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
dependencyCheck {
    // Specifies if the build should be failed if a CVSS score above a specified level is identified.
    // range of 0-10 fails the build, anything greater and it doesn't fail the build
    failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
    suppressionFile = 'config/owasp/suppressions.xml'

    analyzers {
        // Disable scanning of .NET related binaries
        assemblyEnabled = false
    }
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2025.1.2'
    }
    dependencies {
        dependency 'com.fasterxml.jackson.core:jackson-databind:2.22.1'
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
      url = 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
    }
}

pitest {
    junit5PluginVersion.set('1.2.1')
    targetClasses = ['uk.gov.hmcts.reform.*']
    excludedClasses = [
            'uk.gov.hmcts.reform.ccd.madeup.*'
    ]
    threads = 10
    enableDefaultIncrementalAnalysis = true
    outputFormats = ['XML', 'HTML']
    timestampedReports = false
    mutationThreshold = 50
    timeoutConstInMillis = 30000
    mutators.set([
            'CONDITIONALS_BOUNDARY',
            'INCREMENTS',
            'INVERT_NEGS',
            'MATH',
            'NEGATE_CONDITIONALS',
            'VOID_METHOD_CALLS',
            'EMPTY_RETURNS',
            'FALSE_RETURNS',
            'NULL_RETURNS',
            'PRIMITIVE_RETURNS',
            'TRUE_RETURNS',
            'REMOVE_CONDITIONALS'
    ])
}

project.tasks['pitest'].group = "Verification"

def versions = [
    apiGuardian         : '1.1.2',
    commonsIo           : '2.22.0',
    elasticsearch       : '9.4.3',
    flyway              : '12.11.0',
    gradlePitest        : '1.15.0',
    idamClient          : '4.0.0',
    lombok              : '1.18.46',
    reformLogging       : '8.0.0',
    restAssured         : '6.0.1',
    s2sClient           : '6.0.0',
    sonarPitest         : '0.5',
    springBoot          : springBoot.class.package.implementationVersion,
    testcontainers      : '1.21.4',
    wiremock            : '3.0.1',
    pactVersion         : '4.7.3',
    serenity            : '3.1.20',
]

project.ext.pacticipantVersion = getCheckedOutGitCommitHash()

rootProject.tasks.named("processTestResources") {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named("processFunctionalTestResources") {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named("processIntegrationTestResources") {
  duplicatesStrategy = 'include'
}
rootProject.tasks.named("processContractTestResources") {
  duplicatesStrategy = 'include'
}

dependencies {
    modules {
      module("com.google.collections:google-collections") {
        replacedBy("com.google.guava:guava", "google-collections is part of guava")
      }
    }

    implementation "commons-io:commons-io:${versions.commonsIo}"
    implementation "io.rest-assured:rest-assured:${versions.restAssured}"
    implementation "jakarta.ws.rs:jakarta.ws.rs-api:4.0.0"
    implementation "jakarta.annotation:jakarta.annotation-api:3.0.0"
    implementation "jakarta.inject:jakarta.inject-api:2.0.1"
    implementation "com.github.hmcts:idam-java-client:${versions.idamClient}"
    implementation "com.github.hmcts:service-auth-provider-java-client:${versions.s2sClient}"
    implementation "com.github.hmcts.java-logging:logging:${versions.reformLogging}"
    implementation "com.google.code.gson:gson:2.14.0"
    implementation "com.google.guava:guava:33.6.0-jre"
    implementation "commons-fileupload:commons-fileupload:1.6.0"
    implementation "commons-net:commons-net:3.13.0"

    implementation "org.springframework.boot:spring-boot-http-converter"
    implementation "org.springframework.boot:spring-boot-starter"
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    implementation "org.springframework.boot:spring-boot-starter-jdbc"
    implementation "com.microsoft.azure:applicationinsights-web:3.7.9"
    implementation "ch.qos.logback.access:common:2.0.3"

    implementation "org.postgresql:postgresql:42.7.13"
    implementation "org.projectlombok:lombok:${versions.lombok}"
    implementation "co.elastic.clients:elasticsearch-java:${versions.elasticsearch}"
    implementation "co.elastic.clients:elasticsearch-rest5-client:${versions.elasticsearch}"

    annotationProcessor "org.projectlombok:lombok:${versions.lombok}"
    testAnnotationProcessor "org.projectlombok:lombok:${versions.lombok}"

    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "org.springframework.boot:spring-boot-starter-data-jpa-test"
    testImplementation "org.springframework.boot:spring-boot-starter-flyway-test"
    testImplementation "org.testcontainers:postgresql:${versions.testcontainers}"
    testImplementation "org.testcontainers:junit-jupiter:${versions.testcontainers}"
    testImplementation "org.testcontainers:elasticsearch:${versions.testcontainers}"
    testImplementation "org.awaitility:awaitility:4.3.0"
    testImplementation "com.github.tomakehurst:wiremock-jre8-standalone:${versions.wiremock}"
    testImplementation "org.flywaydb:flyway-core:${versions.flyway}"
    testImplementation "com.pivovarit:throwing-function:1.6.1"
    testImplementation "info.solidsoft.gradle.pitest:gradle-pitest-plugin:${versions.gradlePitest}"
    testImplementation "org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5"
    testImplementation "com.github.hmcts:fortify-client:1.4.10:all"

    testImplementation "org.flywaydb:flyway-database-postgresql:${versions.flyway}"

    integrationTestImplementation sourceSets.main.runtimeClasspath
    integrationTestImplementation sourceSets.test.runtimeClasspath

    functionalTestImplementation sourceSets.main.runtimeClasspath
    functionalTestImplementation sourceSets.test.runtimeClasspath

    functionalTestCompileOnly "org.apiguardian:apiguardian-api:${versions.apiGuardian}"
    integrationTestCompileOnly "org.apiguardian:apiguardian-api:${versions.apiGuardian}"

    //pact contract testing
    contractTestImplementation "au.com.dius.pact.consumer:junit5:${versions.pactVersion}"
    contractTestImplementation "au.com.dius.pact.consumer:junit:${versions.pactVersion}"

    contractTestImplementation sourceSets.main.runtimeClasspath
    contractTestImplementation sourceSets.test.runtimeClasspath
}

application {
  mainClass = 'uk.gov.hmcts.reform.ccd.ApplicationBootstrap'
}


pact {
  broker {
    pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
  }
  publish {
    pactDirectory = 'build/pacts'
    tags = [System.getenv("PACT_BRANCH_NAME") ?: 'Dev']
    version = project.pacticipantVersion
  }
}

task runAndPublishConsumerPactTests(type: Test){
  logger.lifecycle("Runs pact Tests")
  testClassesDirs = sourceSets.contractTest.output.classesDirs
  classpath = sourceSets.contractTest.runtimeClasspath
  finalizedBy(pactPublish)
}

task contract(type: Test, description: 'Runs the pact contract tests.', group: 'Verification') {
  description = "Runs the consumer Pact tests"
  useJUnitPlatform()
  testClassesDirs = sourceSets.contractTest.output.classesDirs
  classpath = sourceSets.contractTest.runtimeClasspath
}

task runProviderPactVerification(type: Test) {
  logger.lifecycle("Runs provider pact Tests")
  testClassesDirs = sourceSets.contractTest.output.classesDirs
  classpath = sourceSets.contractTest.runtimeClasspath
  systemProperty 'pact.verifier.publishResults', System.getProperty('pact.verifier.publishResults')
  systemProperty 'pact.provider.version', project.pacticipantVersion
}

runProviderPactVerification.dependsOn contract
runProviderPactVerification.finalizedBy pactVerify

bootJar {
    getArchiveFileName().set(provider {
        'ccd-case-disposer.jar'
    })

    manifest {
        attributes('Implementation-Version': project.version.toString())
    }
}

wrapper {
    distributionType = Wrapper.DistributionType.ALL
}
